retrieve_ENO_DEV1/objects/ENO_team__c.object
<CustomObject>
    <fields>
        <fullName>Role_Other__c</fullName>
        <label>Role Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistant Conductor</fullName>
                </value>
                <value>
                    <fullName>Assistant Director</fullName>
                </value>
                <value>
                    <fullName>Revival Director (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Staff Director (if applicable)</fullName>
                </value>
                <value>
                    <fullName>Chorus Master</fullName>
                </value>
                <value>
                    <fullName>Stage Manager</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>Music Staff</fullName>
                </value>
                <value>
                    <fullName>Music Library</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Production Manager</fullName>
                </value>
                <value>
                    <fullName>Props Supervisor</fullName>
                </value>
                <value>
                    <fullName>Senior Props Technician</fullName>
                </value>
                <value>
                    <fullName>Lighting Supervisor</fullName>
                </value>
                <value>
                    <fullName>Senior LX Tech</fullName>
                </value>
                <value>
                    <fullName>Stage Supervisor</fullName>
                </value>
                <value>
                    <fullName>Sound Supervisor</fullName>
                </value>
                <value>
                    <fullName>Video Supervisor</fullName>
                </value>
                <value>
                    <fullName>Senior Flys Technician</fullName>
                </value>
                <value>
                    <fullName>Drawing Office</fullName>
                </value>
                <value>
                    <fullName>Costume Supervisor</fullName>
                </value>
                <value>
                    <fullName>Wardrobe Mistress/Master</fullName>
                </value>
                <value>
                    <fullName>Wigs/Makeup Supervisor</fullName>
                </value>
                <value>
                    <fullName>Press Contact</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Development Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run__c</fullName>
        <label>Run</label>
        <referenceTo>Run__c</referenceTo>
        <relationshipLabel>ENO Teams</relationshipLabel>
        <relationshipName>ENO_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>B25__Staff__c</referenceTo>
        <relationshipLabel>ENO Teams</relationshipLabel>
        <relationshipName>ENO_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ENO Team</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>ENO Team Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ENO Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>